cambiando extensión de imagen a mostrar.

--- a/horarios.html
+++ b/horarios.html
@@ -39,14 +39,14 @@
 	
 <div class="imagenes">
 	<div class="elemento">
-		<a href="img/kitkat.jpg"><img src="img/prof2.png" alt="" width="200" height="200"></a>
+		<a href="img/kitkat.JPG"><img src="img/prof2.png" alt="" width="200" height="200"></a>
 		<p>7mo Básico.
 			<br>
 			(Dr. Anonymous)
 		</p>
 	</div>
 	<div class="elemento">
-		<a href="img/kitkat.jpg"><img src="img/prof1.jpg" alt="" width="200" height="200"></a>
+		<a href="img/kitkat.JPG"><img src="img/prof1.jpg" alt="" width="200" height="200"></a>
 		<p>8vo Básico.
 			<br>
 			(Rafael Pacheco)
